// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vertical Tabs Tab onActivate is called correctly 1`] = `
<div>
  <li
    class="vertical-tabs-pf-tab"
    id="text-click"
  >
    <a
      class=""
    >
      Click Me
    </a>
  </li>
</div>
`;

exports[`Vertical Tabs Tab wrap styling is set correctly 1`] = `
<div>
  <div>
    <li
      class="vertical-tabs-pf-tab"
      id="default-wrap"
    >
      <a
        class=""
      >
        Default Wrap
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="word-wrap"
    >
      <a
        class=""
      >
        Word Wrap
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="truncate"
    >
      <a
        class="truncate"
      >
        Truncate
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="no-wrap"
    >
      <a
        class="no-wrap"
      >
        No Wrap
      </a>
    </li>
  </div>
</div>
`;

exports[`Vertical Tabs renders restricted tabs properly 1`] = `
<div>
  <ul
    class="vertical-tabs-pf restrict-tabs test-vertical-tabs"
    id="vertical-tabs"
  >
    <li
      class="vertical-tabs-pf-tab shown test-vertical-tabs-tab"
      id="all"
    >
      <a
        class=""
      >
        All
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab active-descendant"
      id="one"
    >
      <a
        class=""
      >
        Tab One
      </a>
      <ul
        class="vertical-tabs-pf restrict-tabs"
      >
        <li
          class="vertical-tabs-pf-tab"
          id="one-one"
        >
          <a
            class=""
          >
            Tab One-One
          </a>
          <ul
            class="vertical-tabs-pf restrict-tabs active-tab"
          >
            <li
              class="vertical-tabs-pf-tab active"
              id="one-one-one"
            >
              <a
                class=""
              >
                Tab One-One-One
              </a>
            </li>
            <li
              class="vertical-tabs-pf-tab"
              id="one-one-two"
            >
              <a
                class=""
              >
                Tab One-One-Two
              </a>
            </li>
            <li
              class="vertical-tabs-pf-tab"
              id="one-one-three"
            >
              <a
                class=""
              >
                Tab One-One-Three
              </a>
            </li>
          </ul>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="one-two"
        >
          <a
            class=""
          >
            Tab One-Two
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="one-three"
        >
          <a
            class=""
          >
            Tab One-Three
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab test-tab-class"
      id="two"
    >
      <a
        class=""
      >
        Tab Two
      </a>
      <ul
        class="vertical-tabs-pf restrict-tabs active-tab"
      >
        <li
          class="vertical-tabs-pf-tab active"
          id="two-one"
        >
          <a
            class=""
          >
            Tab Two-One
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="two-two"
        >
          <a
            class=""
          >
            Tab Two-Two
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="two-three"
        >
          <a
            class=""
          >
            Tab Two-Three
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="three"
    >
      <a
        class=""
      >
        Tab Three
      </a>
      <ul
        class="vertical-tabs-pf restrict-tabs"
      >
        <li
          class="vertical-tabs-pf-tab"
          id="three-one"
        >
          <a
            class=""
          >
            Tab Three-One
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="three-two"
        >
          <a
            class=""
          >
            Tab Three-Two
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="four"
    >
      <a
        class=""
      >
        Tab Four
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="five"
    >
      <a
        class=""
      >
        Tab Five
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="six"
    >
      <a
        class=""
      >
        Tab Six
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="seven"
    >
      <a
        class=""
      >
        Tab Seven
      </a>
    </li>
  </ul>
</div>
`;

exports[`Vertical Tabs renders tabs properly 1`] = `
<div>
  <ul
    class="vertical-tabs-pf test-vertical-tabs"
    id="vertical-tabs"
  >
    <li
      class="vertical-tabs-pf-tab test-vertical-tabs-tab"
      id="all"
    >
      <a
        class=""
      >
        All
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="one"
    >
      <a
        class=""
      >
        Tab One
      </a>
      <ul
        class="vertical-tabs-pf"
      >
        <li
          class="vertical-tabs-pf-tab"
          id="one-one"
        >
          <a
            class=""
          >
            Tab One-One
          </a>
          <ul
            class="vertical-tabs-pf active-tab"
          >
            <li
              class="vertical-tabs-pf-tab active"
              id="one-one-one"
            >
              <a
                class=""
              >
                Tab One-One-One
              </a>
            </li>
            <li
              class="vertical-tabs-pf-tab"
              id="one-one-two"
            >
              <a
                class=""
              >
                Tab One-One-Two
              </a>
            </li>
            <li
              class="vertical-tabs-pf-tab"
              id="one-one-three"
            >
              <a
                class=""
              >
                Tab One-One-Three
              </a>
            </li>
          </ul>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="one-two"
        >
          <a
            class=""
          >
            Tab One-Two
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="one-three"
        >
          <a
            class=""
          >
            Tab One-Three
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab test-tab-class"
      id="two"
    >
      <a
        class=""
      >
        Tab Two
      </a>
      <ul
        class="vertical-tabs-pf"
      >
        <li
          class="vertical-tabs-pf-tab"
          id="two-one"
        >
          <a
            class=""
          >
            Tab Two-One
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="two-two"
        >
          <a
            class=""
          >
            Tab Two-Two
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="two-three"
        >
          <a
            class=""
          >
            Tab Two-Three
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="three"
    >
      <a
        class=""
      >
        Tab Three
      </a>
      <ul
        class="vertical-tabs-pf"
      >
        <li
          class="vertical-tabs-pf-tab"
          id="three-one"
        >
          <a
            class=""
          >
            Tab Three-One
          </a>
        </li>
        <li
          class="vertical-tabs-pf-tab"
          id="three-two"
        >
          <a
            class=""
          >
            Tab Three-Two
          </a>
        </li>
      </ul>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="four"
    >
      <a
        class=""
      >
        Tab Four
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="five"
    >
      <a
        class=""
      >
        Tab Five
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="six"
    >
      <a
        class=""
      >
        Tab Six
      </a>
    </li>
    <li
      class="vertical-tabs-pf-tab"
      id="seven"
    >
      <a
        class=""
      >
        Tab Seven
      </a>
    </li>
  </ul>
</div>
`;
